Upgrade vue-json-pretty 1.9.3->1.9.5 + Fix bad JSON spacing/display

--- a/src/assets/style.scss
+++ b/src/assets/style.scss
@@ -211,3 +211,7 @@ span {
   height: 100px;
   width: 100px;
 }
+
+.vjs-tree {
+  word-wrap: normal !important;
+}
